<resources>
    <string name="CONSTANT_app_name">KeepScore</string>
    <string name="CONSTANT_button_2_players">2</string>
    <string name="CONSTANT_button_3_players">3</string>
    <string name="CONSTANT_button_4_players">4</string>
    <string name="CONSTANT_button_5_players">5</string>
    <string name="CONSTANT_button_6_players">6</string>
    <string name="CONSTANT_button_7_players">7</string>
    <string name="CONSTANT_button_8_players">8</string>
    <string name="CONSTANT_link_donate">market://details?id=com.nolanlawson.keepscore.donate</string>
    <string name="CONSTANT_link_translate">https://github.com/nolanlawson/KeepScore#add-a-translation</string>
    <string name="CONSTANT_pref_plus_button">plus_button</string>
    <string name="CONSTANT_pref_plus_button_default">1</string>
    <string name="CONSTANT_pref_minus_button">minus_button</string>
    <string name="CONSTANT_pref_minus_button_default">-1</string>
    <string name="CONSTANT_pref_2p_button_1">2p_button1</string>
    <string name="CONSTANT_pref_2p_button_1_default">-10</string>
    <string name="CONSTANT_pref_2p_button_2">2p_button2</string>
    <string name="CONSTANT_pref_2p_button_2_default">-5</string>
    <string name="CONSTANT_pref_2p_button_3">2p_button3</string>
    <string name="CONSTANT_pref_2p_button_3_default">5</string>
    <string name="CONSTANT_pref_2p_button_4">2p_button4</string>
    <string name="CONSTANT_pref_2p_button_4_default">10</string>
    <string name="CONSTANT_pref_about">about</string>
    <string name="CONSTANT_pref_button_1">button1</string>
    <string name="CONSTANT_pref_button_1_default">-1</string>
    <string name="CONSTANT_pref_button_2">button2</string>
    <string name="CONSTANT_pref_button_2_default">1</string>
    <string name="CONSTANT_pref_button_3">button3</string>
    <string name="CONSTANT_pref_button_3_default">5</string>
    <string name="CONSTANT_pref_button_4">button4</string>
    <string name="CONSTANT_pref_button_4_default">10</string>
    <string name="CONSTANT_pref_color_scheme">color_scheme</string>
    <string name="CONSTANT_pref_color_scheme_choice_android">android</string>
    <string name="CONSTANT_pref_color_scheme_choice_dark">dark</string>
    <string name="CONSTANT_pref_color_scheme_choice_light">light</string>
    <string name="CONSTANT_pref_color_scheme_choice_classic_light">classic_light</string>
    <string name="CONSTANT_pref_color_scheme_default">@string/CONSTANT_pref_color_scheme_choice_light</string>
    <string name="CONSTANT_pref_disable_highlight_tag">disable_highlight_tag</string>
    <string name="CONSTANT_pref_disable_highlight_tag_default">false</string>
    <string name="CONSTANT_pref_green_text">green_text</string>
    <string name="CONSTANT_pref_green_text_default">false</string>
    <string name="CONSTANT_pref_initial_message">initial_message</string>
    <string name="CONSTANT_pref_initial_message_default">true</string>
    <string name="CONSTANT_pref_initial_score">initial_score</string>
    <string name="CONSTANT_pref_initial_score_default">0</string>
    <string name="CONSTANT_pref_load_settings">load_settings</string>
    <string name="CONSTANT_pref_orientation">orientation</string>
    <string name="CONSTANT_pref_orientation_default">@string/CONSTANT_pref_orientation_choice_landscape</string>
    <string name="CONSTANT_pref_orientation_choice_landscape">landscape</string>
    <string name="CONSTANT_pref_orientation_choice_portrait">portrait</string>
    <string name="CONSTANT_pref_player_names">PlayerNames</string>
    <string name="CONSTANT_pref_reset">reset</string>
    <string name="CONSTANT_pref_save_settings">save_settings</string>
    <string name="CONSTANT_pref_show_colors">show_colors</string>
    <string name="CONSTANT_pref_show_colors_default">true</string>
    <string name="CONSTANT_pref_show_round_totals">show_round_totals</string>
    <string name="CONSTANT_pref_show_round_totals_default">false</string>
    <string name="CONSTANT_pref_update_delay">update_delay</string>
    <string name="CONSTANT_pref_update_delay_default">10</string>
    <string name="CONSTANT_pref_use_wake_lock">use_wake_lock</string>
    <string name="CONSTANT_pref_use_wake_lock_default">true</string>
    <string name="CONSTANT_text_donate_suffix">(Donate)</string>
    <string name="CONSTANT_text_epsilon">Σ</string>
    <string name="button_actions">Actions&#8230;</string>
    <string name="button_history_time_chart">Timeline</string>
    <string name="button_history_round_chart">Round by round</string>
    <string name="button_history_round_table">Round breakdown</string>
    <string name="button_history_player_table">Player breakdown</string>
    <string name="button_customize">Customize&#8230;</string>
    <string name="button_custom">Custom&#8230;</string>
    <string name="button_deselect_all">Deselect All</string>
    <string name="button_more">More&#8230;</string>
    <string name="button_new_game">New Game</string>
    <string name="button_select_all">Select All</string>
    <string name="date_format">MMM dd hh:mmaa</string>
    <string name="hint_game_name">Game Name</string>
    <string name="html_third_party">Third-party</string>
    <string name="html_translations">Translations</string>
    <string name="menu_about">About</string>
    <string name="menu_add_edit_players">Edit Players</string>
    <string name="menu_add_player">Add Player</string>
    <string name="menu_export_to_spreadsheet">Export Spreadsheet</string>
    <string name="menu_history">History</string>
    <string name="menu_home">Home</string>
    <string name="menu_load_backup">Restore</string>
    <string name="menu_randomize">Shuffle</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_rematch">Rematch</string>
    <string name="menu_reset_scores">Reset</string>
    <string name="menu_save_backup">Backup</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sort_players">Sort by Score</string>
    <string name="menu_undo">Undo</string>
    <string name="pref_2p_button_1_name">On-Screen Button #1</string>
    <string name="pref_2p_button_2_name">On-Screen Button #2</string>
    <string name="pref_2p_button_3_name">On-Screen Button #3</string>
    <string name="pref_2p_button_4_name">On-Screen Button #4</string>
    <string name="pref_button_1_name">Popup Button #1</string>
    <string name="pref_button_2_name">Popup Button #2</string>
    <string name="pref_button_3_name">Popup Button #3</string>
    <string name="pref_button_4_name">Popup Button #4</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_cat_advanced">Advanced</string>
    <string name="pref_cat_appearance">Appearance</string>
    <string name="pref_cat_config">Configuration</string>
    <string name="pref_cat_manage">Manage Settings</string>
    <string name="pref_color_scheme_choice_android_name">Android</string>
    <string name="pref_color_scheme_choice_dark_name">Dark</string>
    <string name="pref_color_scheme_choice_light_name">Light</string>
    <string name="pref_color_scheme_choice_classic_light_name">Classic Light</string>
    <string name="pref_color_scheme_name">Colour Scheme</string>
    <string name="pref_disable_highlight_tag_name">Disable bullet</string>
    <string name="pref_disable_highlight_tag_summary">Disable the bullet icon showing which player was scored last.</string>
    <string name="pref_green_text_name">Green Text</string>
    <string name="pref_green_text_summary">Toggle green or blue increment text.</string>
    <string name="pref_initial_score_name">Starting Score</string>
    <string name="pref_initial_message_name">Show welcome message</string>
    <string name="pref_load_settings_name">Load Backup</string>
    <string name="pref_load_settings_summary">Import settings from a saved backup.</string>
    <string name="pref_minus_button_name">- Button</string>
    <string name="pref_orientation_choice_landscape_name">Landscape</string>
    <string name="pref_orientation_choice_portrait_name">Portrait</string>
    <string name="pref_orientation_name">Preferred Orientation</string>
    <string name="pref_plus_button_name">+ Button</string>
    <string name="pref_reset_name">Reset to defaults</string>
    <string name="pref_save_settings_name">Save Backup</string>
    <string name="pref_save_settings_summary">Save a backup of the current settings.</string>
    <string name="pref_show_round_totals_name">Show round totals</string>
    <string name="pref_show_colors_name">Show player colours</string>
    <string name="pref_update_delay_name">Update Delay</string>
    <string name="pref_update_delay_summary">Seconds to wait before adding a new history value (default: 10)</string>
    <string name="pref_use_wake_lock_name">Keep Screen Awake</string>
    <string name="pref_use_wake_lock_summary">Lock screen while playing</string>
    <string name="text_about">About KeepScore</string>
    <string name="text_add_zero">Add Zero</string>
    <string name="text_backup_automatic">Auto\nBackup</string>
    <string name="text_backup_manual">Manual\nBackup</string>
    <string name="text_backup_date_format">MMM dd yyyy hh:mmaa</string>
    <string name="text_confirm">Confirm</string>
    <plurals name="text_confirm_delete_player">
        <item quantity="one">The following player will be deleted: %s.</item>
        <item quantity="other">The following players will be deleted: %s.</item>
    </plurals>
    <string name="text_confirm_rematch">Start a rematch with the same players?</string>
    <string name="text_copy">Copy</string>
    <string name="text_delete">Delete</string>
    <string name="text_delete_saved_settings">The backup \&quot;%s\&quot; will be deleted.</string>
    <string name="text_donate_message">Thank you so much for donating! You are awesome!</string>
    <string name="text_edit_name">Edit Name</string>
    <string name="text_enter_saved_settings_name">Enter name, e.g. \'cribbage\'</string>
    <string name="text_format_rounds">%d Rounds</string>
    <string name="text_format_rounds_singular">%d Round</string>
    <plurals name="text_game_count">
        <item quantity="one">%d game</item>
        <item quantity="other">%d games</item>
    </plurals>
    <string name="text_game_name_separator">-</string>
    <string name="text_game_will_be_deleted">The game will be deleted.</string>
    <string name="text_games_will_be_deleted">%d games will be deleted.</string>
    <string  name="text_load_backup">\'%1$s\' successfully imported.\n\n\
Found: %2$d\n\
Loaded: %3$d\n\
Duplicates: %4$d</string>
    <string name="text_loading">Importing&#8230;</string>
    <string name="text_loading_generic">Loading&#8230;</string>
    <string name="text_no_saved_games">Your saved games will appear here.</string>
    <string name="text_num_players">Number of players</string>
    <string name="text_player">Player</string>
    <string name="text_player_names">Player names (optional)</string>
    <string name="text_players">%s players</string>
    <string name="text_reset_confirm">All settings will be reset.</string>
    <string name="text_restore_initial">You seem to have existing KeepScore games. Restore from a backup?</string>
    <string name="text_round_total">Round #%1$d Total: %2$d</string>
    <plurals name="text_save_backup">
        <item quantity="one">Backup %d game to USB storage?</item>
        <item quantity="other">Backup %d games to USB storage?</item>
    </plurals>
    <plurals name="text_save_backup_succeeded">
        <item quantity="one">%1$d game saved to \'%2$s\'.</item>
        <item quantity="other">%1$d games saved to \'%2$s\'.</item>
    </plurals>
    <string name="text_saved_games">Saved Games</string>
    <string name="text_saving">Exporting&#8230;</string>
</resources>