<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fastscroll="http://schemas.android.com/apk/res/com.nolanlawson.keepscore"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical">

        <com.nolanlawson.keepscore.widget.CustomFastScrollView
            android:id="@+id/fast_scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:layout_above="@+id/view_spacer"
            fastscroll:overlayHeight="75dp"
            fastscroll:overlayScrollThumbWidth="60dp"
            fastscroll:overlayTextSize="22dp"
            fastscroll:overlayWidth="@dimen/fast_scroll_overlay_width" >

            <com.nolanlawson.keepscore.widget.ExceptionCatchingListView
                android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="@android:color/background_light" />

            <TextView
                android:id="@android:id/empty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/text_no_saved_games"
                android:textSize="18sp" />
        </com.nolanlawson.keepscore.widget.CustomFastScrollView>

        <View
            android:id="@+id/view_spacer"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_row_height"
            android:layout_alignParentBottom="true" 
            android:visibility="gone"/>
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:id="@+id/foreground">

        <LinearLayout
            android:id="@+id/layout_button_row"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_row_height"
            android:layout_alignParentBottom="true"
            android:background="@android:drawable/title_bar_tall"
            android:orientation="horizontal"
            android:padding="3dp"
            android:visibility="gone" >

            <Button
                android:id="@android:id/button1"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.3"
                android:ellipsize="none"
                android:gravity="center_vertical|center_horizontal"
                android:lines="2"
                android:text="@string/button_select_all" />

            <Button
                android:id="@android:id/button2"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.3"
                android:ellipsize="none"
                android:gravity="center_vertical|center_horizontal"
                android:lines="2"
                android:text="@string/button_deselect_all" />

            <Button
                android:id="@android:id/button3"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="0.3"
                android:ellipsize="none"
                android:gravity="center_vertical|center_horizontal"
                android:lines="2"
                android:text="@string/text_delete" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>